--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prettier-plugin-organize-imports": "^3.2.2",
     "solid-start-node": "^0.2.19",
     "typescript": "^4.9.4",
-    "vite": "^4.1.4"
+    "vite": "^4.1.4",
+    "wrangler": "^3.0.0"
   },
   "dependencies": {
     "@solidjs/meta": "^0.28.2",
